...
            </objects>
            <point key="canvasLocation" x="604" y="-545"/>
        </scene>
        <!--About Seaglass-->
        <scene sceneID="YdZ-bc-Rgq">
            <objects>
                <viewController title="About Seaglass" showSeguePresentationStyle="single" id="mAy-xi-EWG" customClass="AboutViewController" customModule="Seaglass" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" autoresizesSubviews="NO" id="10O-uP-oCs" customClass="NSVisualEffectView">
                        <rect key="frame" x="0.0" y="0.0" width="631" height="323"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RjU-Hz-XAe">
                                <rect key="frame" x="278" y="49" width="335" height="254"/>
...
            </objects>
            <point key="canvasLocation" x="-139" y="-158"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="R2V-B0-nI4">
            <objects>
                <windowController showSeguePresentationStyle="single" id="B8D-0N-5wS" customClass="LoginWindowController" customModule="Seaglass" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" identifier="LoginWindowController" title="Login" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="LoginWindow" animationBehavior="default" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="IQv-IB-iLA">
                        <windowStyleMask key="styleMask" titled="YES" fullSizeContentView="YES"/>
                        <rect key="contentRect" x="0.0" y="0.0" width="450" height="96"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="2048" height="1152"/>
                        <value key="minSize" type="size" width="450" height="200"/>
                        <connections>
...
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Enter your Matrix ID and password below to log in. " id="71a-le-l1v">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <textField identifier="AccountName" focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kb5-hl-hdI">
                                <rect key="frame" x="91" y="124" width="339" height="22"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Your matrix.org username" drawsBackground="YES" id="HWw-US-Imp">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
...
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Matrix ID:" id="TPL-eF-hqL">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <secureTextField identifier="AccountPassword" focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c3K-Ue-7Yt">
                                <rect key="frame" x="91" y="92" width="339" height="22"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Your matrix.org password" drawsBackground="YES" usesSingleLineMode="YES" id="5Ya-Zh-bXZ">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <buttonCell key="cell" type="check" title="Login automatically" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="GJM-V3-9A2">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                            </button>
                            <button identifier="LoginAdvancedButton" alphaValue="0.5" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fER-D9-2bd">
                                <rect key="frame" x="20" y="22" width="183" height="19"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <buttonCell key="cell" type="recessed" title=" matrix.org" bezelStyle="recessed" image="NSActionTemplate" imagePosition="left" alignment="left" imageScaling="proportionallyDown" inset="2" id="8BC-qt-Sph">
                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="systemLight" size="12"/>
                                </buttonCell>
...
